--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
     <!--    <div onclick="clr(1)" id="foot">-->
 
-    </div>
+    <script data-ad-client="ca-pub-8255221704339624" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <script src="script.js"></script>
 </body>
