added lines between intro

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="altt" onclick="swit();"></div>
         </header>
         <textarea name="txt" id="txt" rows="8"
-            readonly>> Welcome, my name is Dr. Java, MA MEd. What would you like to talk about? (my built in topics are family, school, work, relationships, substance abuse, and self care)</textarea>
+            readonly>> Welcome, my name is Dr. Java, MA MEd. What would you like to talk about?<br><br>(my built in topics are family, school, work, relationships, substance abuse, and self care)</textarea>
         <!--  <div>
             <input type="search" name="in" id="in">
             <input type="button" value="Respond" id="send" onclick="receive()" style="cursor: grab;">
